--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
             slideShadows: true,
           },
           loop: true,
+          autoplay: {
+          delay: 1000,
+          disableOnInteraction: false,
+        },
         });
       </script>
      
