--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
           <div class="swiper-slide" ><img src="./img/Screenshot_2021-02-17-08-26-23-08.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/FB_IMG_1613385960210.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/FB_IMG_1613552124807.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/157272191_250913519917111_8504360121424681997_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/158967678_105356584871340_2071160085919471871_n.jpg" alt=""></div>
+
+
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
