--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
           <div class="swiper-slide" ><img src="./img/FB_IMG_1613552124807.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/157272191_250913519917111_8504360121424681997_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/158967678_105356584871340_2071160085919471871_n.jpg" alt=""></div>
-
+          <div class="swiper-slide" ><img src="./img/Screenshot_2021-04-01-22-58-38-23.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/Screenshot_2021-03-26-06-38-28-45.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/received_1352689838448070.jpeg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/158967678_105356584871340_2071160085919471871_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/received_2733415010304649.jpeg" alt=""></div>
 
         </div>
         <!-- Add Pagination -->
