--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
           <div class="swiper-slide" ><img src="./img/received_1352689838448070.jpeg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/158967678_105356584871340_2071160085919471871_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/received_2733415010304649.jpeg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/Screenshot_2021-04-14-12-46-13-44.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/Screenshot_2021-04-14-12-51-48-85.jpg" alt=""></div>
+
+
 
         </div>
         <!-- Add Pagination -->
