--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
           <div class="swiper-slide" ><img src="./img/received_2733415010304649.jpeg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/Screenshot_2021-04-14-12-46-13-44.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/Screenshot_2021-04-14-12-51-48-85.jpg" alt=""></div>
-
-
-
+          <div class="swiper-slide" ><img src="./img/69725231_527280788007342_8412780406654369792_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/80499363_612963086105778_9086231179882921984_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/82462724_633420207393399_1696693016007278592_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/120090486_3494847107238963_6094123266730846297_o.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/171761018_945186832883400_7801276669012400602_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/172241784_945187759549974_1044385098410056426_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/173163290_279662243637628_334082171006795158_n.jpg" alt=""></div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
