--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
           <div class="swiper-slide" ><img src="./img/171761018_945186832883400_7801276669012400602_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/172241784_945187759549974_1044385098410056426_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/173163290_279662243637628_334082171006795158_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/1947.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2001.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2015.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2016.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2017.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2018.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2019.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2020.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2021.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/2022.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/Screenshot_2021-04-20-09-30-42-51.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/Screenshot_2021-04-23-22-56-21-02.jpg" alt=""></div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
