--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <div class="swiper-slide" ><img src="./img/Screenshot_2021-04-23-22-56-21-02.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/177312283_466613897924151_1205145276738751855_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/177338578_2578941032412105_3717139968090268875_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/180646065_1177000709406351_6357908324971142365_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/181616109_740927739908055_6045789688025409857_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/178709069_1119780028500356_2608326882051694466_n.jpg" alt=""></div>
 
 
         </div>
