--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <div class="swiper-slide" ><img src="./img/180646065_1177000709406351_6357908324971142365_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/181616109_740927739908055_6045789688025409857_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/178709069_1119780028500356_2608326882051694466_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/182010349_149687647123397_8220275755820234258_n.jpg" alt=""></div>
+
 
 
         </div>
