--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           <div class="swiper-slide" ><img src="./img/181616109_740927739908055_6045789688025409857_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/178709069_1119780028500356_2608326882051694466_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/182010349_149687647123397_8220275755820234258_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/185490604_771777656865182_4091957520292647289_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/186145842_3726077567501902_5057973438567820317_n.jpg" alt=""></div>
 
 
 
