--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <div class="swiper-slide" ><img src="./img/182010349_149687647123397_8220275755820234258_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/185490604_771777656865182_4091957520292647289_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/186145842_3726077567501902_5057973438567820317_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/188239026_250003050216290_7618382442057682068_n.jpg" alt=""></div>
 
 
 
