--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
           <div class="swiper-slide" ><img src="./img/188239026_250003050216290_7618382442057682068_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/188850858_505436823974436_4228018617010037139_n.jpg" alt=""></div>
           <div class="swiper-slide" ><img src="./img/190432181_1426190221049430_7542330143829942362_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/193838327_5484030058305506_1379213615657409579_n.jpg" alt=""></div>
+          <div class="swiper-slide" ><img src="./img/188576656_1059205294898598_3884022626114143877_n.jpg" alt=""></div>
+
+
 
           
 
